testsuite/tests/interpreter/streams/test.out
=== Simple stream
1
3
5

=== Ensure laziness
First!
Second!
Third!
2
2

=== Concatenating two streams
a
b
e
f
6

=== Concatenating a list with a stream
1
2
d
e
7

=== Stream from a recursive function
49

=== Methods on stream
[0, "0"]
[1, "1"]
0
"0"
1
"1"

=== Try to access an invalid index in the stream
script.lkql:62:15: error: Invalid index: 6
  62 | val _ = print(err_s[6])
     |               ^^^^^^^^
